@@ -4181,24 +4181,6 @@ retry:
 			m_next_lsd_torrent = m_torrents.begin();
 	}
 
-	namespace
-	{
-		bool is_active(torrent* t, session_settings const& s)
-		{
-			// if we count slow torrents, every torrent
-			// is considered active
-			if (!s.dont_count_slow_torrents) return true;
-			
-			// if the torrent started less than 2 minutes
-			// ago (default), let it count as active since
-			// the rates are probably not accurate yet
-			if (time_now() - t->started() < seconds(s.auto_manage_startup)) return true;
-
-			return t->statistics().upload_payload_rate() != 0.f
-				|| t->statistics().download_payload_rate() != 0.f;
-		}
-	}
-	
 	void session_impl::auto_manage_torrents(std::vector<torrent*>& list
 		, int& dht_limit, int& tracker_limit, int& lsd_limit
 		, int& hard_limit, int type_limit)
@@ -4212,20 +4194,6 @@ retry:
 				|| t->state() == torrent_status::queued_for_checking))
 				continue;
 
-			--dht_limit;
-			--lsd_limit;
-			--tracker_limit;
-			t->set_announce_to_dht(dht_limit >= 0);
-			t->set_announce_to_trackers(tracker_limit >= 0);
-			t->set_announce_to_lsd(lsd_limit >= 0);
-
-			if (!t->is_paused() && !is_active(t, settings())
-				&& hard_limit > 0)
-			{
-				--hard_limit;
-				continue;
-			}
-
 			if (type_limit > 0 && hard_limit > 0)
 			{
 				--hard_limit;
@@ -4234,6 +4202,21 @@ retry:
 				t->log_to_all_peers("AUTO MANAGER STARTING TORRENT");
 #endif
 				t->set_allow_peers(true);
+
+				--dht_limit;
+				--lsd_limit;
+				--tracker_limit;
+				t->set_announce_to_dht(dht_limit >= 0);
+				t->set_announce_to_trackers(tracker_limit >= 0);
+				t->set_announce_to_lsd(lsd_limit >= 0);
+   
+				if (!t->is_paused() && t->is_inactive()
+					&& hard_limit > 0)
+				{
+					// the hard limit takes inactive torrents into account, but the
+					// download and seed limits don't.
+					continue;
+				}
 			}
 			else
 			{
